fixed footer on tablet and desktop view

--- a/code/style.css
+++ b/code/style.css
@@ -135,7 +135,7 @@ footer {
   }
 
   footer {
-  position: absolute;
+  position: bottom;
   }
 
 }
@@ -149,6 +149,10 @@ footer {
   .cards {
   display: flex;
   justify-content: center;
+  }
+
+  footer {
+    position: bottom;
   }
 
 }
